--- a/ui/login.ui
+++ b/ui/login.ui
@@ -47,13 +47,13 @@
 	
     color:white;
     /*背景颜色*/  
-    background-color:rgb(91, 91, 138)
+    background-color:#C1272D;
 
 }
 </string>
     </property>
     <property name="text">
-     <string>AKAGANE THAILAND</string>
+     <string> AKAGANE THAILAND</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -76,10 +76,11 @@
     /*字体大小为20点*/
     font-size:12pt;
     /*字体颜色为白色*/    
-	
+	font-weight:bold;
+	font-style:italic;
     color:white;
     /*背景颜色*/  
-    background-color:rgb(91, 91, 138)
+    background-color:#C1272D;
 
 }
 </string>
@@ -342,7 +343,7 @@ QLineEdit:focus
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -351,7 +352,7 @@ QLineEdit:focus
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -361,7 +362,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -399,7 +400,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -408,7 +409,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -418,7 +419,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -462,7 +463,7 @@ QPushButton:pressed
 	
     color:white;
     /*背景颜色*/  
-    background-color:rgb(91, 91, 138)
+    background-color:#C1272D;
 
 }
 </string>
@@ -529,7 +530,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -538,7 +539,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -548,7 +549,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
