--- a/ui/bookmeetingroom.ui
+++ b/ui/bookmeetingroom.ui
@@ -119,7 +119,7 @@
      <enum>Qt::SolidLine</enum>
     </property>
     <property name="sortingEnabled">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="wordWrap">
      <bool>false</bool>
@@ -704,7 +704,7 @@ QPushButton:pressed
 }</string>
     </property>
     <property name="text">
-     <string>Room 2 (Kitchen)</string>
+     <string>Room 2</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="radioButton_3">
