--- a/ui/login.backup.ui
+++ b/ui/login.backup.ui
@@ -6,27 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>442</width>
-    <height>664</height>
+    <width>381</width>
+    <height>550</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>442</width>
-    <height>664</height>
-   </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>442</width>
-    <height>664</height>
+    <width>381</width>
+    <height>551</height>
    </size>
-  </property>
-  <property name="font">
-   <font>
-    <weight>75</weight>
-    <bold>true</bold>
-   </font>
   </property>
   <property name="windowTitle">
    <string>AKT HR Information System</string>
@@ -44,8 +32,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>471</width>
-      <height>40</height>
+      <width>381</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -55,16 +43,17 @@
     font-family:Microsoft Yahei;
     /*字体大小为20点*/
     font-size:15pt;
-    /*字体颜色为白色*/
+    /*字体颜色为白色*/    
+	
     color:white;
     /*背景颜色*/  
-    background-color:#C1272D;
+    background-color:rgb(91, 91, 138)
 
 }
 </string>
     </property>
     <property name="text">
-     <string> AKAGANE THAILAND</string>
+     <string>AKAGANE THAILAND</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -74,9 +63,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>40</y>
-      <width>471</width>
-      <height>40</height>
+      <y>30</y>
+      <width>381</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -87,11 +76,10 @@
     /*字体大小为20点*/
     font-size:12pt;
     /*字体颜色为白色*/    
-	font-weight:bold;
-	font-style:italic;
+	
     color:white;
     /*背景颜色*/  
-    background-color:#C1272D;
+    background-color:rgb(91, 91, 138)
 
 }
 </string>
@@ -107,7 +95,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>100</y>
+      <y>90</y>
       <width>141</width>
       <height>16</height>
      </rect>
@@ -131,7 +119,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>206</y>
+      <y>180</y>
       <width>141</width>
       <height>16</height>
      </rect>
@@ -155,9 +143,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>120</y>
-      <width>370</width>
-      <height>50</height>
+      <y>110</y>
+      <width>320</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -200,9 +188,9 @@ QLineEdit:focus
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>230</y>
-      <width>370</width>
-      <height>50</height>
+      <y>200</y>
+      <width>320</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -248,9 +236,9 @@ QLineEdit:focus
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>330</y>
-      <width>370</width>
-      <height>50</height>
+      <y>290</y>
+      <width>320</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -284,7 +272,7 @@ QLineEdit:focus
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>304</y>
+      <y>270</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -307,10 +295,10 @@ QLineEdit:focus
    <widget class="QCheckBox" name="checkBox">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>400</y>
-      <width>130</width>
-      <height>30</height>
+      <x>240</x>
+      <y>330</y>
+      <width>110</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -331,9 +319,9 @@ QLineEdit:focus
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>440</y>
-      <width>370</width>
-      <height>50</height>
+      <y>360</y>
+      <width>320</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -354,7 +342,7 @@ QLineEdit:focus
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:#C1272D;
+    background-color:rgb(14 , 150 , 254);
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -363,7 +351,7 @@ QLineEdit:focus
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:#9e1e24;
+    background-color:rgb(7, 114, 254);
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -373,7 +361,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:#CD5257;
+    background-color:rgb(14 , 135 , 228);
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -387,10 +375,10 @@ QPushButton:pressed
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>179</x>
-      <y>520</y>
-      <width>221</width>
-      <height>40</height>
+      <x>160</x>
+      <y>430</y>
+      <width>190</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="font">
@@ -411,7 +399,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:#C1272D;
+    background-color:rgb(14 , 150 , 254);
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -420,7 +408,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:#9e1e24;
+    background-color:rgb(7, 114, 254);
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -430,7 +418,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:#CD5257;
+    background-color:rgb(14 , 135 , 228);
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -445,7 +433,7 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>570</y>
+      <y>470</y>
       <width>208</width>
       <height>50</height>
      </rect>
@@ -458,9 +446,9 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>640</y>
-      <width>450</width>
-      <height>30</height>
+      <y>530</y>
+      <width>381</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -474,7 +462,7 @@ QPushButton:pressed
 	
     color:white;
     /*背景颜色*/  
-    background-color:#C1272D;
+    background-color:rgb(91, 91, 138)
 
 }
 </string>
@@ -489,9 +477,9 @@ QPushButton:pressed
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>186</x>
-      <y>615</y>
-      <width>250</width>
+      <x>200</x>
+      <y>510</y>
+      <width>180</width>
       <height>20</height>
      </rect>
     </property>
@@ -517,9 +505,9 @@ QPushButton:pressed
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>520</y>
-      <width>111</width>
-      <height>40</height>
+      <y>430</y>
+      <width>100</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="font">
@@ -537,11 +525,11 @@ QPushButton:pressed
     font-family:Microsoft Yahei;
     /*字体大小为20点*/
     font-size:11pt;
-    /*字体颜色为白色*/    
 	font-weight: bold;
+    /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:#C1272D;
+    background-color:rgb(14 , 150 , 254);
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -550,7 +538,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:#9e1e24;
+    background-color:rgb(7, 114, 254);
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -560,7 +548,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:#CD5257;
+    background-color:rgb(14 , 135 , 228);
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
