--- a/ui/otapplication.ui
+++ b/ui/otapplication.ui
@@ -1326,6 +1326,9 @@ QDateEdit:focus
       <property name="gridStyle">
        <enum>Qt::SolidLine</enum>
       </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
       <property name="rowCount">
        <number>1</number>
       </property>
