--- a/ui_highDPI/bookmeetingroom.ui
+++ b/ui_highDPI/bookmeetingroom.ui
@@ -119,7 +119,7 @@
      <enum>Qt::SolidLine</enum>
     </property>
     <property name="sortingEnabled">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="wordWrap">
      <bool>false</bool>
@@ -689,7 +689,7 @@ QPushButton:pressed
    <widget class="QRadioButton" name="radioButton_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>170</x>
       <y>440</y>
       <width>161</width>
       <height>21</height>
@@ -706,7 +706,7 @@ QPushButton:pressed
 }</string>
     </property>
     <property name="text">
-     <string>Room 2 (Kitchen)</string>
+     <string>Room 2</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="radioButton_3">
