--- a/ui_highDPI/otapplication.ui
+++ b/ui_highDPI/otapplication.ui
@@ -1305,8 +1305,12 @@ QDateEdit:focus
        <string notr="true">QTableWidget
 {
 	background-color: rgb(225, 255, 254);
+}
 
-}</string>
+QTableWidget::item:selected {
+    background-color: #C1272D;
+}
+</string>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -1887,7 +1891,7 @@ QPushButton:pressed
     <property name="styleSheet">
      <string notr="true">QFrame
 {
-	background-color:rgb(14 , 150 , 254);
+	background-color:#C1272D;
 
 }</string>
     </property>
