--- a/ui/bookmeetingroom.ui
+++ b/ui/bookmeetingroom.ui
@@ -49,6 +49,17 @@
       <bold>false</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QCalendarWidget QTableView {
+    selection-background-color: #C1272D;
+}
+
+#qt_calendar_navigationbar {
+    background-color: #C1272D;
+	font-weight: bold;
+    color: white;
+}</string>
+    </property>
     <property name="gridVisible">
      <bool>true</bool>
     </property>
@@ -94,7 +105,10 @@
      <string notr="true">QTableWidget
 {
 	background-color: rgb(225, 255, 254);
+}
 
+QTableWidget::item:selected {
+    background-color: #C1272D;
 }</string>
     </property>
     <property name="frameShape">
@@ -219,7 +233,7 @@
     <property name="styleSheet">
      <string notr="true">QFrame
 {
-	background-color:rgb(8, 88, 186);
+	background-color:#C1272D;
 
 }</string>
     </property>
