--- a/ui/forgetrecord.ui
+++ b/ui/forgetrecord.ui
@@ -157,7 +157,10 @@ QPushButton:pressed
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true"/>
+    <string notr="true">QTableWidget::item:selected {
+    background-color:#C1272D;
+}
+</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
