--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -68,7 +68,7 @@
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -77,7 +77,7 @@
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -88,7 +88,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -126,7 +126,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -135,7 +135,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -146,7 +146,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -184,7 +184,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -193,7 +193,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -204,7 +204,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -242,7 +242,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -251,7 +251,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -262,7 +262,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -292,7 +292,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:12px;
 }</string>
@@ -317,7 +317,7 @@ QPushButton:pressed
 	font-weight:bold;    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -326,7 +326,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -336,7 +336,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -367,7 +367,7 @@ QPushButton:pressed
 	font-weight:bold;    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -376,7 +376,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -386,7 +386,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -417,7 +417,7 @@ QPushButton:pressed
 	font-weight:bold;    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
 
 }
@@ -462,7 +462,7 @@ QLabel:pressed
 	font-weight:bold;    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -471,7 +471,7 @@ QLabel:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -481,7 +481,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -520,7 +520,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(85, 0, 255);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -529,7 +529,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(58, 0, 175);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -540,7 +540,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(57, 0, 122);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -591,7 +591,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(85, 0, 255);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:10px;
 }
@@ -600,7 +600,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(58, 0, 175);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -611,7 +611,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(57, 0, 122);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
