--- a/ui_highDPI/askforleave.ui
+++ b/ui_highDPI/askforleave.ui
@@ -3492,6 +3492,10 @@ QPushButton:pressed
 {
 	background-color: rgb(225, 255, 254);
 
+}
+
+QTableWidget::item:selected {
+    background-color: #C1272D;
 }</string>
       </property>
       <property name="frameShape">
@@ -3638,7 +3642,7 @@ QPushButton:pressed
     <property name="styleSheet">
      <string notr="true">QFrame
 {
-	background-color:rgb(14 , 150 , 254);
+	background-color:#C1272D;
 
 }</string>
     </property>
