--- a/ui_highDPI/password.ui
+++ b/ui_highDPI/password.ui
@@ -268,7 +268,7 @@ QLineEdit:focus
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -277,7 +277,7 @@ QLineEdit:focus
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -287,7 +287,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
@@ -325,7 +325,7 @@ QPushButton:pressed
     /*字体颜色为白色*/    
     color:white;
     /*背景颜色*/  
-    background-color:rgb(14 , 150 , 254);
+    background-color:#C1272D;
     /*边框圆角半径为8像素*/ 
     border-radius:5px;
 }
@@ -334,7 +334,7 @@ QPushButton:pressed
 QPushButton:hover
 {
     /*背景颜色*/  
-    background-color:rgb(7, 114, 254);
+    background-color:#9e1e24;
     padding-left:-3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
     padding-top:-3px;
@@ -344,7 +344,7 @@ QPushButton:hover
 QPushButton:pressed
 {
     /*背景颜色*/  
-    background-color:rgb(14 , 135 , 228);
+    background-color:#CD5257;
     /*左内边距为3像素，让按下时字向右移动3像素*/  
     padding-left:3px;
     /*上内边距为3像素，让按下时字向下移动3像素*/  
