--- a/ui/forgetrecord.ui
+++ b/ui/forgetrecord.ui
@@ -384,7 +384,7 @@ QDateEdit:focus
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>550</x>
      <y>270</y>
      <width>181</width>
      <height>31</height>
@@ -412,9 +412,9 @@ QDateEdit:focus
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>550</x>
      <y>300</y>
-     <width>330</width>
+     <width>190</width>
      <height>150</height>
     </rect>
    </property>
@@ -1322,6 +1322,126 @@ QTimeEdit:focus
    </property>
    <property name="checked">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>370</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Microsoft JhengHei UI</family>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel
+{
+	font-size:11pt;
+	color:rgb(111,111,111);
+}</string>
+   </property>
+   <property name="text">
+    <string>OT Time</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit_3">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>300</y>
+     <width>150</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTextEdit
+
+{
+    /*字体为微软雅黑*/
+    font-family:Microsoft Yahei;
+    /*字体大小为20点*/
+	color:rgb(50, 50, 50);
+   font-size:10pt;
+	background-color:rgb(255, 251, 201);
+}
+</string>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="lineWidth">
+    <number>1</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>270</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Microsoft JhengHei UI</family>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel
+{
+	font-size:11pt;
+	color:rgb(111,111,111);
+}</string>
+   </property>
+   <property name="text">
+    <string>Work Time</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit_4">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>400</y>
+     <width>150</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTextEdit
+
+{
+    /*字体为微软雅黑*/
+    font-family:Microsoft Yahei;
+    /*字体大小为20点*/
+	color:rgb(50, 50, 50);
+   font-size:10pt;
+	background-color:rgb(255, 251, 201);
+}
+</string>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="lineWidth">
+    <number>1</number>
    </property>
   </widget>
  </widget>
