--- a/ui/approve_panel.ui
+++ b/ui/approve_panel.ui
@@ -3371,6 +3371,102 @@ QComboBox:focus
      </property>
     </widget>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>24</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+	background-color: rgba(255, 0, 0, 200);
+	border-radius:12px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	qproperty-alignment: 'AlignHCenter | AlignVCenter';
+	
+}</string>
+    </property>
+    <property name="text">
+     <string>!</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>30</y>
+      <width>24</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+	background-color: rgba(255, 0, 0, 200);
+	border-radius:12px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	qproperty-alignment: 'AlignHCenter | AlignVCenter';
+	
+}</string>
+    </property>
+    <property name="text">
+     <string>!</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>30</y>
+      <width>24</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+	background-color: rgba(255, 0, 0, 200);
+	border-radius:12px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	qproperty-alignment: 'AlignHCenter | AlignVCenter';
+	
+}</string>
+    </property>
+    <property name="text">
+     <string>!</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>30</y>
+      <width>24</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+	background-color: rgba(255, 0, 0, 200);
+	border-radius:12px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	qproperty-alignment: 'AlignHCenter | AlignVCenter';
+	
+}</string>
+    </property>
+    <property name="text">
+     <string>!</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
