--- a/ui/forgetrecord.ui
+++ b/ui/forgetrecord.ui
@@ -1233,24 +1233,21 @@ QTimeEdit:focus
   <widget class="QLabel" name="label_31">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>450</y>
+     <x>260</x>
+     <y>453</y>
      <width>270</width>
      <height>30</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Microsoft JhengHei UI</family>
-     <pointsize>11</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel
 {
-	font-size:11pt;
+	font-size:13px;
 	color:rgb(229, 0, 0)
 }</string>
    </property>
@@ -1442,6 +1439,54 @@ QTimeEdit:focus
    </property>
    <property name="lineWidth">
     <number>1</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>42</x>
+     <y>453</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>-1</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel
+{
+	font-size:11px;
+	color:rgb(111,111,111);
+}</string>
+   </property>
+   <property name="text">
+    <string>Clock out for yesterday(After 0:00 am)</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_5">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>460</y>
+     <width>21</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QCheckBox
+{
+	font-size:9pt;
+	color:rgb(111,111,111);
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
