--- a/ui_highDPI/askforleave.ui
+++ b/ui_highDPI/askforleave.ui
@@ -745,7 +745,7 @@ QLineEdit:focus
 }</string>
       </property>
       <property name="text">
-       <string>Anual Leave Remains:</string>
+       <string>Annual Leave Remains:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_10">
@@ -1858,7 +1858,7 @@ QPushButton:pressed
      <widget class="QLabel" name="label_17">
       <property name="geometry">
        <rect>
-        <x>680</x>
+        <x>690</x>
         <y>10</y>
         <width>161</width>
         <height>31</height>
