--- a/ui_highDPI/forgetrecord.ui
+++ b/ui_highDPI/forgetrecord.ui
@@ -1234,7 +1234,7 @@ QTimeEdit:focus
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>660</y>
+     <y>675</y>
      <width>380</width>
      <height>40</height>
     </rect>
@@ -1442,6 +1442,54 @@ QTimeEdit:focus
    </property>
    <property name="lineWidth">
     <number>1</number>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_5">
+   <property name="geometry">
+    <rect>
+     <x>15</x>
+     <y>660</y>
+     <width>21</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QCheckBox
+{
+	font-size:9pt;
+	color:rgb(111,111,111);
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>41</x>
+     <y>655</y>
+     <width>461</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>-1</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel
+{
+	font-size:15px;
+	color:rgb(111,111,111);
+}</string>
+   </property>
+   <property name="text">
+    <string>Clock out for yesterday(After 0:00 am)</string>
    </property>
   </widget>
  </widget>
